tests/typing/bad/testfile-println-2.jl
struct println a; div; b end
